--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         <activity
             android:name=".AudioPlayerActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".ui.TrackActivity"
+            android:exported="false" />
+
         <activity
             android:name=".SearchActivity"
             android:exported="false">
