--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".ui.TrackActivity"
+            android:name=".ui.PlayerActivity"
             android:exported="false" />
 
         <activity
